# Intoduction-to-ML

./: docker_instruction.txt  git_instruction.txt  openCVpak.py
Decision tree/: 1 read file.py  2 four features.py  3 class str.py  4 target.py  5 nan remove.py  6 teach DT.py  7 importances.py
Pandas/: agePas.py  correlationCoef.py  firstClassPas.py  pasCount.py  survivedPas.py  womanNames.py
Python GUI/Converter/: Converter.py  test1.ui
Python GUI/Converter_2/: Converter.py
Python GUI/ListWidget/: Converter.py  test1.ui
Python GUI/MessageBox/: MessageBox.py
Python GUI/Test GUI/: UItest.py  test1.ui
Statement neighbours/: 2 extract.py  3 crossVal.py
docker/: docker_readme.txt  gitlab-ci_launch.txt  gitlab-runner_launch.txt  gitlab_launch.txt
opencv/: Draw line.py  Draw rectangle.py  Draw text.py  Face recognition.py  HSE sklearn.py  Harris Corner Detector.py  HoughLines  ORB.py  linux  segmentit.py  start_pr
opencv/hw_opencv/: CML  CMakeLists.txt  DrawFrame1.cpp  DrawFrame2.cpp  OptFlowDraw  Read_XML_1.cpp  XML_framedata  add_birdeye_view  add_ccmap  draw_rect_after_grab_XML.cpp  main.cpp  main1.cpp  opt_flow_segmmap  segmmap_detect_draw  try_opt_flow
opencv/linux_scripts/: Dairy  NVIDIA_vs_nouveau.txt  diary  how_to_empty_swap.txt  mount  pipenv
opencv/pipenv/: Pipfile  pipenv
opencv/small_tasks/: Fourier_transform.py
